app/styles/album.css
.card{
	width:100%;
}

body {
		/*min-height: 75rem;*/
		/* Can be removed; just added for demo purposes */
		background-color: #E8EAF6 !important;
		position: relative;
		padding-top:50px;
}

.navbar {
		background-color: #303F9F !important;
}

a.nav-link{
	color: #ffffff !important;
}
a.nav-link.active {
		color: black !important;
	}

.jumbotron{
	background-color:#3F51B5 !important;
	margin-bottom: 0px !important;
}

h1.jumbotron-heading{
	font-size: 55px;
	color: white;
	font-weight:500;
}

@media (max-width: 544px) {
	h1.jumbotron-heading{
		font-size: 10px;
		color: white;
		font-weight:500;
	}

	h4.card-title{
		font-size:15px;
	}

	.card-deck-wrapper{
		margin-left:25px;
		margin-right:25px;
	}
}

@media (max-width: 768px) {
	h1.jumbotron-heading{
		font-size: 10px;
		color: white;
		font-weight:500;
	}

	h4.card-title{
		font-size:15px;
	}
	.card-deck-wrapper{
		margin-left:25px;
		margin-right:25px;
	}
}

@media (max-width: 992px) {
	h1.jumbotron-heading{
		font-size: 30px;
		color: white;
		font-weight:500;
	}
}

@media (max-width: 1200px) {
	h1.jumbotron-heading{
		font-size: 30px;
		color: white;
		font-weight:500;
	}
}

section h2 {

	/*padding-bottom: 75px;
	padding-top: 100px;*/
	margin-bottom:25px;
	/*padding-bottom:-25px;*/
}
.work, .education, .projects, .aboutme {
		/*min-height: 50rem;*/
		/*padding-bottom: 75px;
		padding-top: 100px;*/
		/*margin-top:-100px*/

		padding-top: 50px;
		margin-top: -50px;
		padding-bottom:50px;

		/*background-color: #E8EAF6;*/
		border-bottom-color: rgba(0, 0, 0, 0.1);
		border-bottom-width: 1px;
		border-bottom-style: solid;
}

img.card-img-top.img-fluid{
	padding-left:25px;
	padding-right:25px;
	padding-top:10px;
}

footer p {
		margin-bottom: .25rem;
}

footer{
		background-color: #303F9F !important;
		padding-top:25px;
		padding-bottom:25px;
}

footer .credits{
	font-family: "Roboto Mono";
	font-weight:400;
	padding-top:220px;
	color:#FFFFFF;
}

footer .powered-list{
	font-family: 'Roboto' !important;
	font-weight: 900 !important;
}

.section-title{
	padding-left:10px;
	padding-top: 10px;
	padding-bottom: 10px;
	font-weight: 900;
	color: #424242;
	font-size: 40px;
}

p.lead{
	font-weight:500;
	border: black;
	border-width: 10px;
	display: inline-block;
	border-style: solid;
	background-color: black;
}

canvas {
	/*display: block;
	vertical-align: bottom;
	position: absolute;*/
	/*top: 0;*/
	/*height:275px !important;*/
}

/* ---- particles.js container ---- */

#particles-js {
	/*position: absolute;*/
	width: 100%;
	height: 100%;
	background-color: #3F51B5;
	background-image: url("");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 50% 50%;
}

.text {
	font-family: 'Roboto Mono';
	font-weight: 100;
	color: #20C20E !important;
}

